; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_img_format.c_mp_imgfmt_select_best.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_img_format.c_mp_imgfmt_select_best.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_PIX_FMT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_imgfmt_select_best(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [3 x i32], align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @imgfmt2pixfmt(i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @imgfmt2pixfmt(i32 %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @imgfmt2pixfmt(i32 %15)
  store i32 %16, i32* %9, align 4
  %17 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 0
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %17, align 4
  %19 = getelementptr inbounds i32, i32* %17, i64 1
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %19, align 4
  %21 = getelementptr inbounds i32, i32* %19, i64 1
  %22 = load i32, i32* @AV_PIX_FMT_NONE, align 4
  store i32 %22, i32* %21, align 4
  %23 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 0
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @avcodec_find_best_pix_fmt_of_list(i32* %23, i32 %24, i32 1, i32 0)
  %26 = call i32 @pixfmt2imgfmt(i32 %25)
  ret i32 %26
}

declare dso_local i32 @imgfmt2pixfmt(i32) #1

declare dso_local i32 @pixfmt2imgfmt(i32) #1

declare dso_local i32 @avcodec_find_best_pix_fmt_of_list(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
